# gitspoke

./: .gitignore  LICENSE  README.md  pyproject.toml
src/gitspoke/: __init__.py  cli.py  main.py
