[project]
name = "gitspoke"
version = "0.1.0"
description = "Download GitHub repositories"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "ghapi>=1.0.6",
    "requests>=2.32.3",
]

[project.scripts]
gitspoke = "gitspoke.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
